# frontend

./: .coderabbit.yaml  App.tsx  README.md  app.json  package-lock.json  package.json  tsconfig.json
android/: settings.gradle
android/app/: CMakeLists.txt  build.gradle  empty.cpp
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/: index.android.bundle
android/app/src/main/java/com/frontendrnios/: MainActivity.kt  MainApplication.kt
android/app/src/main/java/com/jangjeongwoon/iAi/: MainActivity.kt  MainApplication.kt
android/app/src/main/res/values/: strings.xml
ios/: Podfile  exportOptions.plist
ios/FrontendRNiOS/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
ios/FrontendRNiOS.xcodeproj/: project.pbxproj
ios/FrontendRNiOS.xcodeproj/xcshareddata/xcschemes/: FrontendRNiOS.xcscheme
ios/FrontendRNiOS.xcworkspace/: contents.xcworkspacedata
src/assets/: index.ts
src/components/: CharacterScreen.tsx  ChatHistoryScreen.tsx  CollectionScreen.tsx  ConceptScreen.tsx  ConversationScreen.tsx  DiaryDetailScreen.tsx  DiaryScreen.tsx  EmotionScreen.tsx  KakaoLoginScreen.tsx  OnboardingScreen.tsx  ReportScreen.tsx  SignupScreen.tsx
src/config/: appConfig.json
src/services/: api.mock.ts  api.ts  index.ts
src/store/: useAppStore.ts
src/types/: index.ts
src/utils/: constants.ts  data.ts
